syntax = "proto3";

package grpc_go_vue;
// option go_package = "grpc_go_vue/proto/greet";

message Greeting {
    string firtname = 1;
    string lastname = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse{
    string result = 1;
}

service GreetService{
    rpc Greet(GreetRequest) returns (GreetResponse){}
}